--- a/fullstack facebook/package.json
+++ b/fullstack facebook/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2"
@@ -24,6 +29,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "nodemon": "^3.1.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
