--- a/fullstack facebook/package.json
+++ b/fullstack facebook/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
