--- a/fullstack facebook/package.json
+++ b/fullstack facebook/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
