--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fullstack-facebook": "file:",
     "mongoose": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
