--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "fullstack-facebook": "file:",
     "mongoose": "^8.5.2",
+    "mysql2": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
