--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
   },
