--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,23 +5,21 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
+    "esModuleInterop": true,
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
-  
+  "include": ["./**/*.ts"],
+  "references": [
+    { "path": "./tsconfig.node.json" },
+    { "path": "./server/tsconfig.json" }
+  ]
 }
