--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-esm server.ts",
+    "start": "npx tsx server.ts",
     "dev": "ts-node-dev server.ts"
   },
   "keywords": [],
