--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@iconify/iconify": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fullstack-facebook": "file:",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "mysql2": "^3.11.0",
