--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
