--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/iconify": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "body-parser": "^1.20.2",
+    "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
