--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
+    "@types/browser-image-compression": "^1.0.9",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
