--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URL= mongodb+srv://fullstack:123@atlascluster.wf8n3.mongodb.net/
+MONGO_URL=mongodb+srv://FullStackHD:123@atlascluster.yvajv.mongodb.net/
 YOUR_SECRET_KEY=your-secret-key
